# Com-rcio-Local

./: .gitignore  ComercioLocal.sln  README.md
Comercio Local/: Comercio Local.sln
Comercio Local/Comercio Local/: Comercio Local.cpp  Comercio Local.vcxproj  Comercio Local.vcxproj.filters
ComercioLocal/: CMakeLists.txt  Carrinho.cpp  ComercioLocal.cpp  ComercioLocal.vcxproj  ComercioLocal.vcxproj.filters  Logs.cpp  Logs.h  Menus.cpp  Produtos.cpp  Produtos.h  carrinhos.cpp  carrinhos.h  main.cpp  menus.h  resource.h
enc_temp_folder/498be66529d319c4941d36104d504ed6/: Logs.cpp
enc_temp_folder/7a8029a41bc4edf32fd13c2dcb74e6/: Menus.cpp
enc_temp_folder/7ce74d4fa254f8fe849c6fad525271/: carrinhos.cpp
enc_temp_folder/8d8b814cda35e83d2f61c66cd9e5a/: Produtos.cpp
enc_temp_folder/a7d4044d249314f2e57becd12ef0d4/: Menus.cpp
